@@ -1,5 +1,8 @@
 weighted.mean <- function(x, w, na.rm = FALSE) {
-    if(missing(w)) w <- rep.int(1, length(x))
+    if(missing(w))
+      w <- rep.int(1, length(x))
+    else if (length(w) != length(x))
+      stop("x and w must have the same length")
     if(is.integer(w)) w <- as.numeric(w)  # avoid overflow in sum.
     if (na.rm) {
 	w <- w[i <- !is.na(x)]
